--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sitioweb?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=4664
+spring.datasource.url=jdbc:mysql://db-semillero.cktrdbvjzbda.us-east-1.rds.amazonaws.com:3306/jas?serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=qpalwosk20
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
