--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,21 @@
 plugins {
 	id 'org.springframework.boot' version '2.2.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id 'java'
+	id 'war'
 }
 
 group = 'com.ecommerce'
-version = '0.0.1-SNAPSHOT'
+version = ''
 sourceCompatibility = '1.8'
+
+
+apply plugin: 'war'
+
+
+bootJar {
+    mainClassName = 'EcommerceApplication.App'
+}
+
 
 repositories {
 	mavenCentral()
@@ -21,6 +30,9 @@ dependencies {
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat
+	compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.2.1.RELEASE'
+	
 }
 
 test {
