--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
 	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat
 	compile group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: '1.2.1.RELEASE'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	
 }
 
