--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=admin
 spring.datasource.password=qpalwosk20
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+spring.jpa.hibernate.ddl-auto=update
 
 spring.security.header=Authorization
 spring.security.prefix=Bearer
