--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,25 @@ dependencies {
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 	
+	// https://mvnrepository.com/artifact/com.itextpdf/html2pdf
+	//compile group: 'com.itextpdf', name: 'html2pdf', version: '2.1.3'
+	// https://mvnrepository.com/artifact/com.itextpdf/html2pdf
+	compile group: 'com.itextpdf', name: 'html2pdf', version: '2.1.4'
+	
+	// https://mvnrepository.com/artifact/org.antlr/stringtemplate
+	//compile group: 'org.antlr', name: 'stringtemplate', version: '4.0.2'
+	// https://mvnrepository.com/artifact/org.antlr/stringtemplate
+	//compile group: 'org.antlr', name: 'stringtemplate', version: '3.2'
+	
+	// https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring4
+	compile group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.0.11.RELEASE'
+	// https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf
+	//compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.11.RELEASE'
+	
+	/*compile group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.6'
+	compile group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf-itext5', version: '9.1.6'*/
+
+	
 }
 
 test {
